syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message LighthouseResponse {
  // The timestamp of when the results were generated.
  google.protobuf.Timestamp fetch_time = 1;

  // The url requested to lightrider.
  string requested_url = 2;

  // The final analyzed URL, differs from requested_url when there were
  // redirects.
  string final_url = 3;

  // The version of Lighthouse with which these results were generated.
  string lighthouse_version = 4;

  // The environment that the audit was run in
  Environment environment = 5;

  // The user agent that was used to run the audit
  string user_agent = 6;

  // Any top level warnings that this run encountered
  repeated string run_warnings = 7;

  // A runtime error that was encountered during the run
  RuntimeError runtime_error = 8;

  // A map containing the results of the audits, keyed by audit id. Audits may
  // be referenced within more than one category.
  map<string, AuditResult> audits = 9;

  // A map containing the categories of audits, keyed by category id.
  map<string, Category> categories = 10;

  // A map containing groups that categories can belong to, keyed by group id
  map<string, CategoryGroup> category_groups = 11;

  // The settings that were used to run this audit
  ConfigSettings config_settings = 12;

  // EXPERIMENTAL - i18n information
  google.protobuf.Struct EXPERIMENTAL_i18n = 13;
}

message Environment {
  // The user agent that was used by the network
  string network_user_agent = 1;

  // The user agent used by the host 
  string host_user_agent = 2;

  // The benchmark index that indicates rough device class
  int32 benchmark_index = 3;
}

message RuntimeError {
  // The text repr of the error type
  string code = 1;

  // The error explanitory message
  string message = 2;
}

message ConfigSettings {
  // The output types the audit made (json, html...)
  repeated string output = 1;

  // The maximum amount of time to wait for loading in ms
  int32 max_wait_for_load = 2;

  // Network throttling options
  enum ThrottlingMethod {
    // Unknown method.  Should not be used
    UNKNOWN_THROTTLING_METHOD = 0;

    // Use devtools to throttle the request
    devtools = 1;
    
    // Use no additional throttling (only throttling provided by system itself)
    provided = 2;

    // Simulate throttling with Lantern
    simulate = 3;
  }
  
  // The throttling method used during this audit
  ThrottlingMethod throttling_method = 3;

  // The throttling settings used
  Throttling throttling = 4;

  // Flag indicating this audit was gather only or not
  bool gatherMode = 5;

  // Flag disabling clearing the browser cache before runs
  bool disable_storage_reset = 6;

  // Flag indicating if device emulation was enabled or not
  bool disable_device_emulation = 7;

  // The possible form factors an audit can be run in
  enum EmulatedFormFactor {
    // Unknown form factor.  This should not be used
    UNKNOWN_FORM_FACTOR = 0;

    // Mobile form factor
    mobile = 1;

    // Desktop form factor
    desktop = 2;

    // No emulation used, uses system directly
    none = 3;
  }
  
  // The form factor used in the audit
  EmulatedFormFactor emulated_form_factor = 8;
  
  // The locale that was active during the audit
  string locale = 9;

  // List of URL patterns that were blocked during this audit
  repeated string blocked_url_patterns = 10;

  // Comma delimited list of trace categories to capture
  string additional_trace_categories = 11;

  // Map of extra HTTP Headers to pass in with the request
  map<string, string> extra_headers = 12;

  // List of the audits that were preformed, empty if all were run
  repeated string only_audits = 13;

  // List of the categories that were run, empty if all were run
  repeated string only_categories = 14;

  // List of the audits that were skipped, empty if all were run
  repeated string skip_audits = 15;
}

message Throttling {
  // The round trip time in ms
  int32 rtt_ms = 1;

  // The throughput in kilobytes per second
  float throughput_kbps = 2;

  // The request latency in milliseconds
  float request_latency_ms = 3;

  // The download throughput in kilobytes per second
  float download_throughput_kbps = 4;

  // The upload throughput in kilobytes per second
  int32 upload_throughput_kbps = 5;

  // The amount of slowdown to apply to the cpu
  int32 cpu_slowdown_multiplier = 6;
}

message CategoryGroup {
  // The human readable title of the group
  string title = 1;

  // The description of what the category is grouping
  string description = 2;
}

// Message containing a category of audits and their combined weighted score.
message Category {
  // the internal id of the category
  string id = 1;

  // The human-friendly name of the category.
  string title = 2;

  // A description of what this category is about (e.g. these help you validate
  // your PWA).
  string description = 3;

  // The overall score of the category, the weighted average of all its audits,
  // from 0-1.
  float score = 4;

  // An description for manual audits within this category.
  string manual_description = 5;

  // References to all the audit members and their weight in this category.
  repeated AuditRef audit_refs = 6;
}

// A Category's reference to an AuditResult, with a weight for category scoring.
message AuditRef {
  // Matches a key in the top-level `audits` map.
  string id = 1;

  // The weight of the audit's score in the overall category score.
  float weight = 2;

  // The category group that the audit belongs to
  string group = 3;
}

// Message containing the result of an individual Lighthouse audit.
message AuditResult {
  // The internal audit id
  string id = 1;

  // A brief description of the audit. The text can change depending on if the
  // audit passed or failed.
  string title = 2;

  // A more detailed description that describes why the audit is important and
  // links to Lighthouse documentation on the audit; markdown links supported.
  string description = 3;

  // The scored value determined by the audit, in the range `0-1`, or NaN if
  // `score_display_mode` indicates not scored.
  float score = 4;

  // The ways an audit score should be interpreted:
  enum ScoreDisplayMode {
    // Unknown mode. This should not be used.
    SCORE_DISPLAY_MODE_UNSPECIFIED = 0;
    // Pass/fail audit (0 and 1 are the only possible scores).
    binary = 1;
    // Scores of 0-1, inclusive.
    numeric = 2;
    // The audit is an FYI only, and can't be interpreted as pass/fail. Score is
    // NaN and should be ignored.
    informative = 3;
    // The audit turned out to not apply to the page. Score is NaN and should be
    // ignored.
    not_applicable = 4;
    // The audit exists only to tell you to review something yourself. Score is
    // NaN and should be ignored
    manual = 5;
    // There was an error while running the audit (check `error_message` for
    // details). Score is NaN and should be ignored.
    error = 6;
  }

  // The mode for how the score should be interpreted.
  ScoreDisplayMode score_display_mode = 5;

  // The human readable value that is displayed as the audit's result
  repeated string display_value = 6;

  // An explanation of audit-related issues encountered on the test page.
  string explanation = 7;

  // Error message from any exception thrown while running this audit.
  string error_message = 8;

  // Extra information provided by some types of audits.  Given as an arbitrary object.
  google.protobuf.Struct details = 9;

  // List of warnings associated with this audit
  repeated string warnings = 10;
}
